<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quiz</string>
    <string name="hello_world">Welcome to quiz !</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="instructor">Instructor</string>
    <string name="student">Student</string>
    <string name="college_id">College ID </string>
    <string name="write_id">Write college ID</string>
    <string name="create_account">Create account</string>
    <string name="back">Back</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_student">Student</string>
    <string name="title_activity_instructor">Instructor</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="title_activity_quistion1">Quistion1</string>
    <string name="title_activity_pquiz">PQuiz</string>
    <string name="put_quiz">Put Quiz</string>
    <string name="title_activity_q1">Q1</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>

</resources>
